[project]
name = "gracevivi523-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs<2.0.0,>=1.4.3",
    "mkdocs-include-markdown-plugin<7.0.0,>=6.1.1",
    "mkdocs-material<10.0.0,>=9.5.13",
    "mkdocs-mermaid2-plugin<1.0.0,>=0.6.0",
    "mkdocs-redirects<2.0.0,>=1.2.0",
    "markupsafe<3.0.0,>=2.1.3",
    "mkdocstrings<1.0.0,>=0.22.0",
    "mkdocstrings-python<2.0.0,>=1.1.2",
    "markdown-include<1.0.0,>=0.8.1",
    "mkdocs-section-index<1.0.0,>=0.3.5",
]
